test/files/neg/t7289.check
t7289.scala:8: error: could not find implicit value for parameter e: Test.Schtroumpf[scala.collection.immutable.Nil.type]
  implicitly[Schtroumpf[Nil.type]]
            ^
one error found
